--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <link rel="icon" href="images/favicon.png" type="image/png">
 
 
-    <title>Short Stories</title>
+    <title>Privacy Policy</title>
 
 </head>
 <body>
 
   <h1>Privacy Policy</h1>
-   <p>Effective Date: [Date]</p>
+   <p>Effective Date: 08/07/2023</p>
    <p>Welcome to Dash's Short Stories! This Privacy Policy is designed to inform you that we do not collect any personal information or data from our users when you use our mobile application.</p>
    <h2>1. Information Collection:</h2>
    <p><strong>Personal Information:</strong> We do not collect, store, or process any personally identifiable information (PII) from our users. Your privacy is paramount, and we are committed to ensuring that your personal data remains protected.</p>
@@ -37,18 +37,8 @@
    <h2>7. Changes to Privacy Policy:</h2>
    <p>We reserve the right to update or modify this Privacy Policy as needed. Any changes will be reflected in the updated version, and the effective date will be specified.</p>
    <h2>8. Contact Us:</h2>
-   <p>If you have any questions or concerns about our Privacy Policy or app, please contact us at [contact email or address].</p>
+   <p>If you have any questions or concerns about our Privacy Policy or app, please contact us at eijunfuruya@gmail.com.</p>
    <p>By using Dash's Short Stories, you acknowledge that we do not collect any data, and you agree to the terms outlined in this Privacy Policy.</p>
- </body>
 
-
-<footer>
-<p class="copyright">DashShortStories 2023. All rights reserved.</p>
-</footer>
-
-
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8395599106276615"
-     crossorigin="anonymous"></script>
 </body>
 </html>
